--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
             <ul>
             <li> Managed and oversaw projects in the chapter.</li>
             <li>Oversaw recruitment and training of new members</li> </ul>
+
+        <h2>My Contact Information</h2>
+
+        <h3>
+           <ul>
+            <li> Contact number-(+1)945-265-4763</li>
+            <li>Email ID-rimmalapudivenky999@gmail.com</li>
+           </ul>
+        </h3> 
         
         
 
